--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>kie-wb-common</module>
         <module>jbpm-form-modeler</module>
         <module>drools-wb</module>
+        <module>jbpm</module>
         <module>jbpm-designer</module>
         <module>jbpm-wb</module>
         <module>optaplanner-wb</module>
@@ -56,6 +57,7 @@
         <module>kie-wb-common</module>
         <module>jbpm-form-modeler</module>
         <module>drools-wb</module>
+        <module>jbpm</module>
         <module>jbpm-designer</module>
         <module>jbpm-wb</module>
         <module>optaplanner-wb</module>
@@ -114,6 +116,12 @@
       <id>drools</id>
       <modules>
         <module>drools</module>
+      </modules>
+    </profile>
+    <profile>
+      <id>jbpm</id>
+      <modules>
+        <module>jbpm</module>
       </modules>
     </profile>
   </profiles>
