--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <module>kie-wb-common</module>
         <module>jbpm-form-modeler</module>
         <module>drools-wb</module>
+        <module>droolsjbpm-tools</module>
         <module>jbpm</module>
         <module>jbpm-designer</module>
         <module>jbpm-wb</module>
@@ -59,6 +60,7 @@
         <module>kie-wb-common</module>
         <module>jbpm-form-modeler</module>
         <module>drools-wb</module>
+        <module>droolsjbpm-tools</module>
         <module>jbpm</module>
         <module>jbpm-designer</module>
         <module>jbpm-wb</module>
