--- a/.gitmodules
+++ b/.gitmodules
@@ -103,3 +103,6 @@
 	url = git@github.com:kiegroup/kie-soup.git
 	branch = master
   ignore = all
+[submodule "kie-wb-playground"]
+	path = kie-wb-playground
+	url = git@github.com:kiegroup/kie-wb-playground
