--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,18 @@
         <module>jbpm</module>
       </modules>
     </profile>
+    <profile>
+      <id>droolsjbpm-integration</id>
+      <modules>
+        <module>droolsjbpm-integration</module>
+      </modules>
+    </profile>
+    <profile>
+      <id>droolsjbpm-knowledge</id>
+      <modules>
+        <module>droolsjbpm-knowledge</module>
+      </modules>
+    </profile>
   </profiles>
 
 </project>
